--- a/Ass3/ToDo.css
+++ b/Ass3/ToDo.css
@@ -6,6 +6,7 @@
     text-align: center;
     background-color: brown;
     padding: 20px 30px;
+	color:white;
 }
 
 
@@ -29,12 +30,12 @@ input {
     width: 25%;
     background: #d9d9d9;
     color: #555;
-    float: left;
     text-align: center;
     font-size: 16px;
     cursor: pointer;
     transition: 0.3s;
     border-radius: 0;
+	float: right;
   }
   .addBtn:hover {
     background-color: #bbb;
@@ -72,6 +73,6 @@ input {
     background-color: #f44336;
     color: white;
   }
-
+	
   
   
