--- a/Ass3Comp/ToDo.css
+++ b/Ass3Comp/ToDo.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #e8a87c;
+  background-color: #d79922;
 }
 
 
@@ -10,7 +10,7 @@ body {
 
 .header {
     text-align: center;
-    background-color: brown;
+    background-color: #5d001e;
     padding: 20px 30px;
 	color:white;
 }
